--- a/Lets_FindUs/app/src/main/AndroidManifest.xml
+++ b/Lets_FindUs/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.lets_findus">
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.REQUEST_DELETE_PACKAGES"/>
 
     <application
         android:allowBackup="true"
