--- a/Lets_FindUs/app/build.gradle
+++ b/Lets_FindUs/app/build.gradle
@@ -41,4 +41,5 @@ dependencies {
     def fragment_version = "1.3.0-beta01"
     implementation "androidx.fragment:fragment:$fragment_version"
     implementation "androidx.activity:activity:$activity_version"
+    implementation "androidx.cardview:cardview:1.0.0"
 }
