--- a/Lets_FindUs/app/build.gradle
+++ b/Lets_FindUs/app/build.gradle
@@ -42,4 +42,9 @@ dependencies {
     implementation "androidx.fragment:fragment:$fragment_version"
     implementation "androidx.activity:activity:$activity_version"
     implementation "androidx.cardview:cardview:1.0.0"
+    def room_version = "2.2.5"
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+    implementation "androidx.coordinatorlayout:coordinatorlayout:1.1.0"
+    implementation 'com.google.android.material:material:1.3.0-alpha01'
 }
