--- a/Lets_FindUs/app/build.gradle
+++ b/Lets_FindUs/app/build.gradle
@@ -27,18 +27,17 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'androidx.navigation:navigation-fragment:2.3.1'
-    implementation 'androidx.navigation:navigation-ui:2.3.1'
+    implementation 'androidx.navigation:navigation-fragment:2.3.2'
+    implementation 'androidx.navigation:navigation-ui:2.3.2'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.android.gms:play-services-location:17.1.0'
-    implementation 'org.jetbrains:annotations-java5:15.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'com.google.code.gson:gson:2.8.6'
-    def activity_version = "1.2.0-beta01"
-    def fragment_version = "1.3.0-beta01"
+    def activity_version = "1.2.0-beta02"
+    def fragment_version = "1.3.0-beta02"
     implementation "androidx.fragment:fragment:$fragment_version"
     implementation "androidx.activity:activity:$activity_version"
     implementation "androidx.cardview:cardview:1.0.0"
@@ -46,5 +45,6 @@ dependencies {
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
     implementation "androidx.coordinatorlayout:coordinatorlayout:1.1.0"
-    implementation 'com.google.android.material:material:1.3.0-alpha01'
+    implementation 'com.google.android.material:material:1.3.0-alpha04'
+    implementation 'com.mikhaellopez:circularimageview:4.2.0'
 }
