--- a/Lets_FindUs/app/build.gradle
+++ b/Lets_FindUs/app/build.gradle
@@ -47,4 +47,6 @@ dependencies {
     implementation "androidx.coordinatorlayout:coordinatorlayout:1.1.0"
     implementation 'com.google.android.material:material:1.3.0-alpha04'
     implementation 'com.mikhaellopez:circularimageview:4.2.0'
+    implementation 'com.google.android.material:material:1.3.0-alpha04'
+    implementation 'com.github.onemandan:MaterialTextView:0.0.5'
 }
