--- a/Lets_FindUs/app/build.gradle
+++ b/Lets_FindUs/app/build.gradle
@@ -49,4 +49,5 @@ dependencies {
     implementation 'com.mikhaellopez:circularimageview:4.2.0'
     implementation 'com.google.android.material:material:1.3.0-alpha04'
     implementation 'com.github.onemandan:MaterialTextView:0.0.5'
+    implementation 'com.facebook.shimmer:shimmer:0.1.0@aar'
 }
