--- a/Lets_FindUs/app/build.gradle
+++ b/Lets_FindUs/app/build.gradle
@@ -41,7 +41,7 @@ dependencies {
     implementation "androidx.fragment:fragment:$fragment_version"
     implementation "androidx.activity:activity:$activity_version"
     implementation "androidx.cardview:cardview:1.0.0"
-    def room_version = "2.2.5"
+    def room_version = "2.2.6"
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
     implementation "androidx.coordinatorlayout:coordinatorlayout:1.1.0"
@@ -49,5 +49,5 @@ dependencies {
     implementation 'com.mikhaellopez:circularimageview:4.2.0'
     implementation 'com.google.android.material:material:1.3.0-alpha04'
     implementation 'com.github.onemandan:MaterialTextView:0.0.5'
-    implementation 'com.facebook.shimmer:shimmer:0.1.0@aar'
+    implementation 'com.whiteelephant:monthandyearpicker:1.3.0'
 }
