--- a/Lets_FindUs/app/src/main/AndroidManifest.xml
+++ b/Lets_FindUs/app/src/main/AndroidManifest.xml
@@ -31,10 +31,10 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
         <meta-data android:name="com.google.android.geo.API_KEY" android:value="@string/google_maps_key" />
+
         <service
             android:name=".MainActivity"
-            android:foregroundServiceType="location">
-        </service>
+            android:foregroundServiceType="location" />
     </application>
 
 
