--- a/Lets_FindUs/build.gradle
+++ b/Lets_FindUs/build.gradle
@@ -1,4 +1,8 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+ext {
+    defaultMinSdkVersion = 26
+    defaultMinSdkVersion1 = defaultMinSdkVersion
+    defaultMinSdkVersion2 = 23
+}// Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     repositories {
         google()
