--- a/Lets_FindUs/app/build.gradle
+++ b/Lets_FindUs/app/build.gradle
@@ -51,4 +51,5 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0-alpha04'
     implementation 'com.github.onemandan:MaterialTextView:0.0.5'
     implementation 'com.whiteelephant:monthandyearpicker:1.3.0'
+    implementation 'com.github.AppIntro:AppIntro:6.0.0'
 }
