--- a/Lets_FindUs/app/src/main/AndroidManifest.xml
+++ b/Lets_FindUs/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".FirstOpening"></activity>
+        <activity android:name=".ProfileCreationActivity"></activity>
+        <activity android:name=".FirstOpening" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
@@ -26,7 +27,7 @@
         <activity
             android:name=".ui.profile.EditProfileActivity"
             android:label="@string/edit_mode"
-            android:parentActivityName=".MainActivity"></activity>
+            android:parentActivityName=".MainActivity" />
 
         <meta-data
             android:name="com.google.android.gms.version"
@@ -37,7 +38,7 @@
 
         <service
             android:name=".MainActivity"
-            android:foregroundServiceType="location"></service>
+            android:foregroundServiceType="location" />
     </application>
 
 </manifest>
