--- a/Lets_FindUs/app/build.gradle
+++ b/Lets_FindUs/app/build.gradle
@@ -13,6 +13,7 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunnerArguments clearPackageData: 'true'
     }
 
     buildTypes {
@@ -20,6 +21,10 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+    }
+
+    testOptions {
+        unitTests.includeAndroidResources = true
     }
 }
 
@@ -43,14 +48,23 @@ dependencies {
     implementation "androidx.fragment:fragment:$fragment_version"
     implementation "androidx.activity:activity:$activity_version"
     implementation "androidx.cardview:cardview:1.0.0"
-    def room_version = "2.2.6"
+    def room_version = "2.3.0-alpha04"
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
+    implementation "com.google.guava:guava:30.1-android"
+    implementation "androidx.room:room-guava:$room_version"
     implementation "androidx.coordinatorlayout:coordinatorlayout:1.1.0"
-    implementation 'com.google.android.material:material:1.3.0-alpha04'
+    implementation 'com.google.android.material:material:1.3.0-beta01'
     implementation 'com.mikhaellopez:circularimageview:4.2.0'
-    implementation 'com.google.android.material:material:1.3.0-alpha04'
     implementation 'com.github.onemandan:MaterialTextView:0.0.5'
     implementation 'com.whiteelephant:monthandyearpicker:1.3.0'
+
+    testImplementation 'junit:junit:4.12'
+    testImplementation 'androidx.test:core:1.3.0'
+    androidTestImplementation 'com.android.support:support-annotations:28.0.0'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
+
+    implementation 'com.github.yalantis:ucrop:2.2.6'
     implementation 'com.github.AppIntro:AppIntro:6.0.0'
 }
