--- a/Lets_FindUs/app/src/main/AndroidManifest.xml
+++ b/Lets_FindUs/app/src/main/AndroidManifest.xml
@@ -26,8 +26,8 @@
         </provider>
 
         <activity android:name=".ui.ViewPictureActivity" />
-        <activity android:name=".ProfileCreationActivity"></activity>
-        <activity android:name=".FirstOpeningInformations" />
+        <activity android:name=".ui.first_boot.ProfileCreationActivity"></activity>
+        <activity android:name=".ui.first_boot.FirstOpeningInformations" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
