--- a/Lets_FindUs/app/src/main/AndroidManifest.xml
+++ b/Lets_FindUs/app/src/main/AndroidManifest.xml
@@ -17,7 +17,6 @@
         android:name="android.hardware.location.gps" />
 
 
-    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <application
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
@@ -33,7 +32,10 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ClientActivity">
+            android:name=".client.ClientActivity">
+        </activity>
+        <activity
+            android:name=".server.ServerActivity">
         </activity>
     </application>
 
