--- a/Lets_FindUs/app/build.gradle
+++ b/Lets_FindUs/app/build.gradle
@@ -16,6 +16,11 @@ android {
         testInstrumentationRunnerArguments clearPackageData: 'true'
     }
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
     buildTypes {
         release {
             minifyEnabled false
