--- a/Lets_FindUs/app/src/main/AndroidManifest.xml
+++ b/Lets_FindUs/app/src/main/AndroidManifest.xml
@@ -34,7 +34,8 @@
         <activity android:name=".ui.first_boot.FirstOpeningInformations" />
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
