--- a/Lets_FindUs/app/build.gradle
+++ b/Lets_FindUs/app/build.gradle
@@ -75,4 +75,6 @@ dependencies {
 
     implementation 'com.google.android.libraries.places:places:2.4.0'
     implementation 'com.google.android.gms:play-services-places:17.0.0'
+
+    implementation 'joda-time:joda-time:2.9.9'
 }
