--- a/Lets_FindUs/app/src/main/AndroidManifest.xml
+++ b/Lets_FindUs/app/src/main/AndroidManifest.xml
@@ -61,6 +61,15 @@
         <service
             android:name=".MainActivity"
             android:foregroundServiceType="location" />
+
+        <receiver
+            android:name="com.example.lets_findus.utilities.DeleteBroadcastReceiver"
+            android:process=":remote" >
+        </receiver>
+
+        <service
+            android:name="com.example.lets_findus.utilities.DeleteOldMeetingService"
+            android:exported="false" />
     </application>
 
 </manifest>
